--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_map: ^5.0.0
   latlong2: ^0.9.0
   url_launcher: ^6.1.7
+  http: ^1.0.0
 
 dev_dependencies:
   flutter_test:
