--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_map: ^5.0.0
   latlong2: ^0.9.0
-  url_launcher: ^6.1.7
+  url_launcher: ^6.2.4
   http: ^1.0.0
 
 dev_dependencies:
@@ -30,3 +30,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/logo.png
+    - assets/comedouro_icon.png
