--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   latlong2: ^0.9.0
   url_launcher: ^6.2.4
   http: ^1.0.0
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
