--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,3 +34,24 @@ flutter:
     - assets/logo.png
     - assets/comedouro_icon.png
     - assets/.env
+    - assets/fonts/SFPRODISPLAYBLACKITALIC.OTF
+    - assets/fonts/SFPRODISPLAYREGULAR.OTF
+    - assets/fonts/SFPRODISPLAYBOLD.OTF
+    - assets/fonts/SFPRODISPLAYSEMIBOLDITALIC.OTF
+    - assets/fonts/SFPRODISPLAYHEAVYITALIC.OTF
+    - assets/fonts/SFPRODISPLAYTHINITALIC.OTF
+    - assets/fonts/SFPRODISPLAYLIGHTITALIC.OTF
+    - assets/fonts/SFPRODISPLAYULTRALIGHTITALIC.OTF
+    - assets/fonts/SFPRODISPLAYMEDIUM.OTF
+  fonts:
+    - family: SFProDisplay
+      fonts:
+        - asset: assets/fonts/SFPRODISPLAYBLACKITALIC.OTF
+        - asset: assets/fonts/SFPRODISPLAYREGULAR.OTF
+        - asset: assets/fonts/SFPRODISPLAYBOLD.OTF
+        - asset: assets/fonts/SFPRODISPLAYSEMIBOLDITALIC.OTF
+        - asset: assets/fonts/SFPRODISPLAYHEAVYITALIC.OTF
+        - asset: assets/fonts/SFPRODISPLAYTHINITALIC.OTF
+        - asset: assets/fonts/SFPRODISPLAYLIGHTITALIC.OTF
+        - asset: assets/fonts/SFPRODISPLAYULTRALIGHTITALIC.OTF
+        - asset: assets/fonts/SFPRODISPLAYMEDIUM.OTF
