--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   http: ^1.0.0
   flutter_dotenv: ^5.0.2
   sleek_circular_slider: ^2.0.1
+  flutter_launcher_icons: "^0.13.1"
 
 dev_dependencies:
   flutter_test:
