--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   fl_chart: ^0.70.2
-  syncfusion_flutter_charts: ^28.2.11
+  syncfusion_flutter_charts: ^29.1.33
   provider: ^6.1.2
   intl: ^0.20.2
   google_fonts: ^6.2.1
@@ -22,7 +22,7 @@ dependencies:
   http: ^1.0.0
   flutter_dotenv: ^5.0.2
   sleek_circular_slider: ^2.0.1
-  flutter_launcher_icons: "^0.13.1"
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
