--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,15 +23,27 @@ dependencies:
   flutter_dotenv: ^5.0.2
   sleek_circular_slider: ^2.0.1
   flutter_launcher_icons: ^0.14.3
+  flutter_native_splash: ^2.2.13
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
 
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/logo.png
+  android: false
+  ios: true
+  web: true
+  color_dark: "#000000"
+  image_dark: assets/logo.png
+
+
 flutter:
   uses-material-design: true
   assets:
+    - assets/PeatDeviceLight.png
     - assets/logo.png
     - assets/comedouro_icon.png
     - assets/.env
